--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,11 @@ CLOUD_API_SECRET=g8tuaNCLzQ5Qj9LuzstYOi88K-I
 
 JWT_TOKEN_KEY=myverysupersecretkey
 
+
+
+# //rishabh code
 API_KEY=AIzaSyBuwOjFcY8x1ztaBj2gjLMeRncejxs9-r0
+
+# account_Sid=AC5ca3a24884231f187e6cc0a099733bf9
+
+# auth_Token=03446ac27d7a0e959f2c926ade4d1027
