--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
     "@mui/material": "^6.4.8",
     "axios": "^1.8.4",
     "highlight.js": "^11.11.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.483.0",
     "prismjs": "^1.30.0",
     "react": "^18.3.1",
