--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/timegrid": "^6.1.17",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "@zegocloud/zego-uikit-prebuilt": "^2.14.3-beta",
     "axios": "^1.8.4",
     "highlight.js": "^11.11.1",
     "html2canvas": "^1.4.1",
