--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,9 @@ CLOUD_API_SECRET=g8tuaNCLzQ5Qj9LuzstYOi88K-I
 
 JWT_TOKEN_KEY=myverysupersecretkey
 
-
+TWILIO_ACCOUNT_SID=AC0b89a26650940b1e2822bb38ea0b1426
+TWILIO_AUTH_TOKEN=064219b55bb1e988c95ff45b5635e964
+TWILIO_WHATSAPP_FROM=+14155238886
 
 # //rishabh code
 API_KEY=AIzaSyBuwOjFcY8x1ztaBj2gjLMeRncejxs9-r0
