--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@gsap/react": "^2.1.2",
+    "@lottiefiles/dotlottie-react": "^0.13.4",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@zegocloud/zego-uikit-prebuilt": "^2.14.3-beta",
